// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`composed diagrams > cycle keeps a stable command profile 1`] = `
{
  "chrome": [
    [
      "polyline",
      "polyline",
      "polyline",
      "polyline",
      "polyline",
      "polyline",
    ],
  ],
  "profile": [
    {
      "box": {
        "h": 260,
        "w": 640,
        "x": 0,
        "y": 0,
      },
      "kind": "surface",
    },
    {
      "box": {
        "h": 46,
        "w": 104,
        "x": 268,
        "y": 16,
      },
      "kind": "rect",
    },
    {
      "box": {
        "h": 16,
        "w": 84,
        "x": 278,
        "y": 24,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 30,
        "w": 84,
        "x": 278,
        "y": 42,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 46,
        "w": 104,
        "x": 486,
        "y": 153,
      },
      "kind": "rect",
    },
    {
      "box": {
        "h": 16,
        "w": 84,
        "x": 496,
        "y": 161,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 30,
        "w": 84,
        "x": 496,
        "y": 179,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 46,
        "w": 104,
        "x": 50,
        "y": 153,
      },
      "kind": "rect",
    },
    {
      "box": {
        "h": 16,
        "w": 84,
        "x": 60,
        "y": 161,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 15,
        "w": 84,
        "x": 60,
        "y": 179,
      },
      "kind": "text",
    },
  ],
}
`;

exports[`composed diagrams > flow keeps a stable command profile 1`] = `
{
  "chrome": [
    [
      "path",
      "moveTo",
      "lineTo",
      "quadraticCurveTo",
      "lineTo",
      "quadraticCurveTo",
      "lineTo",
      "polyline",
      "path",
      "moveTo",
      "lineTo",
      "quadraticCurveTo",
      "lineTo",
      "quadraticCurveTo",
      "lineTo",
      "polyline",
    ],
  ],
  "profile": [
    {
      "box": {
        "h": 260,
        "w": 640,
        "x": 0,
        "y": 0,
      },
      "kind": "surface",
    },
    {
      "box": {
        "h": 64,
        "w": 123,
        "x": 258,
        "y": 14,
      },
      "kind": "rect",
    },
    {
      "box": {
        "h": 16,
        "w": 71,
        "x": 284,
        "y": 22,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 30,
        "w": 71,
        "x": 284,
        "y": 40,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 64,
        "w": 90,
        "x": 275,
        "y": 98,
      },
      "kind": "rect",
    },
    {
      "box": {
        "h": 16,
        "w": 70,
        "x": 285,
        "y": 106,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 30,
        "w": 70,
        "x": 285,
        "y": 124,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 64,
        "w": 139,
        "x": 250,
        "y": 182,
      },
      "kind": "rect",
    },
    {
      "box": {
        "h": 16,
        "w": 87,
        "x": 276,
        "y": 198,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 15,
        "w": 87,
        "x": 276,
        "y": 216,
      },
      "kind": "text",
    },
  ],
}
`;

exports[`composed diagrams > funnel keeps a stable command profile 1`] = `
{
  "chrome": [
    [
      "path",
      "moveTo",
      "lineTo",
      "lineTo",
      "lineTo",
      "closePath",
      "path",
      "moveTo",
      "lineTo",
      "lineTo",
      "lineTo",
      "closePath",
      "path",
      "moveTo",
      "lineTo",
      "lineTo",
      "lineTo",
      "closePath",
    ],
  ],
  "profile": [
    {
      "box": {
        "h": 228,
        "w": 608,
        "x": 16,
        "y": 16,
      },
      "kind": "surface",
    },
    {
      "box": {
        "h": 16,
        "w": 389,
        "x": 125,
        "y": 37,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 15,
        "w": 389,
        "x": 125,
        "y": 56,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 16,
        "w": 187,
        "x": 227,
        "y": 113,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 15,
        "w": 187,
        "x": 227,
        "y": 132,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 16,
        "w": 187,
        "x": 227,
        "y": 189,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 15,
        "w": 187,
        "x": 227,
        "y": 208,
      },
      "kind": "text",
    },
  ],
}
`;

exports[`composed diagrams > hub keeps a stable command profile 1`] = `
{
  "chrome": [
    [
      "line",
      "line",
    ],
  ],
  "profile": [
    {
      "box": {
        "h": 260,
        "w": 640,
        "x": 0,
        "y": 0,
      },
      "kind": "surface",
    },
    {
      "box": {
        "h": 42,
        "w": 104,
        "x": 268,
        "y": 12,
      },
      "kind": "rect",
    },
    {
      "box": {
        "h": 16,
        "w": 84,
        "x": 278,
        "y": 20,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 30,
        "w": 84,
        "x": 278,
        "y": 38,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 42,
        "w": 104,
        "x": 268,
        "y": 206,
      },
      "kind": "rect",
    },
    {
      "box": {
        "h": 16,
        "w": 84,
        "x": 278,
        "y": 214,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 15,
        "w": 84,
        "x": 278,
        "y": 232,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 48,
        "w": 125,
        "x": 258,
        "y": 106,
      },
      "kind": "rect",
    },
    {
      "box": {
        "h": 16,
        "w": 105,
        "x": 268,
        "y": 114,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 15,
        "w": 105,
        "x": 268,
        "y": 132,
      },
      "kind": "text",
    },
  ],
}
`;

exports[`composed diagrams > matrix keeps a stable command profile 1`] = `
{
  "chrome": [
    [],
  ],
  "profile": [
    {
      "box": {
        "h": 20,
        "w": 301,
        "x": 14,
        "y": 19,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 20,
        "w": 301,
        "x": 325,
        "y": 19,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 91,
        "w": 301,
        "x": 14,
        "y": 49,
      },
      "kind": "rect",
    },
    {
      "box": {
        "h": 16,
        "w": 281,
        "x": 24,
        "y": 78,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 15,
        "w": 281,
        "x": 24,
        "y": 96,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 91,
        "w": 301,
        "x": 325,
        "y": 49,
      },
      "kind": "rect",
    },
    {
      "box": {
        "h": 16,
        "w": 281,
        "x": 335,
        "y": 78,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 15,
        "w": 281,
        "x": 335,
        "y": 96,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 91,
        "w": 301,
        "x": 14,
        "y": 150,
      },
      "kind": "rect",
    },
    {
      "box": {
        "h": 16,
        "w": 281,
        "x": 24,
        "y": 179,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 15,
        "w": 281,
        "x": 24,
        "y": 197,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 232,
        "w": 612,
        "x": 14,
        "y": 14,
      },
      "kind": "surface",
    },
  ],
}
`;

exports[`composed diagrams > mindmap keeps a stable command profile 1`] = `
{
  "chrome": [
    [
      "path",
      "moveTo",
      "lineTo",
      "quadraticCurveTo",
      "lineTo",
      "quadraticCurveTo",
      "lineTo",
      "path",
      "moveTo",
      "lineTo",
      "quadraticCurveTo",
      "lineTo",
      "quadraticCurveTo",
      "lineTo",
    ],
  ],
  "profile": [
    {
      "box": {
        "h": 260,
        "w": 640,
        "x": 0,
        "y": 0,
      },
      "kind": "surface",
    },
    {
      "box": {
        "h": 34,
        "w": 106,
        "x": 267,
        "y": 113,
      },
      "kind": "rect",
    },
    {
      "box": {
        "h": 16,
        "w": 86,
        "x": 277,
        "y": 122,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 34,
        "w": 106,
        "x": 358,
        "y": 113,
      },
      "kind": "rect",
    },
    {
      "box": {
        "h": 16,
        "w": 86,
        "x": 368,
        "y": 122,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 34,
        "w": 106,
        "x": 449,
        "y": 113,
      },
      "kind": "rect",
    },
    {
      "box": {
        "h": 16,
        "w": 86,
        "x": 459,
        "y": 122,
      },
      "kind": "text",
    },
  ],
}
`;

exports[`composed diagrams > org keeps a stable command profile 1`] = `
{
  "chrome": [
    [
      "path",
      "moveTo",
      "lineTo",
      "quadraticCurveTo",
      "lineTo",
      "quadraticCurveTo",
      "lineTo",
      "path",
      "moveTo",
      "lineTo",
      "quadraticCurveTo",
      "lineTo",
      "quadraticCurveTo",
      "lineTo",
    ],
  ],
  "profile": [
    {
      "box": {
        "h": 260,
        "w": 640,
        "x": 0,
        "y": 0,
      },
      "kind": "surface",
    },
    {
      "box": {
        "h": 64,
        "w": 104,
        "x": 268,
        "y": 16,
      },
      "kind": "rect",
    },
    {
      "box": {
        "h": 16,
        "w": 84,
        "x": 278,
        "y": 24,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 30,
        "w": 84,
        "x": 278,
        "y": 42,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 64,
        "w": 104,
        "x": 268,
        "y": 98,
      },
      "kind": "rect",
    },
    {
      "box": {
        "h": 16,
        "w": 84,
        "x": 278,
        "y": 106,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 30,
        "w": 84,
        "x": 278,
        "y": 124,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 64,
        "w": 104,
        "x": 268,
        "y": 180,
      },
      "kind": "rect",
    },
    {
      "box": {
        "h": 16,
        "w": 84,
        "x": 278,
        "y": 196,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 15,
        "w": 84,
        "x": 278,
        "y": 214,
      },
      "kind": "text",
    },
  ],
}
`;

exports[`composed diagrams > pictogram keeps a stable command profile 1`] = `
{
  "chrome": [
    [
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "closePath",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "closePath",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "closePath",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "closePath",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "closePath",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "closePath",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "closePath",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "closePath",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "closePath",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "closePath",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "closePath",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "closePath",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
    ],
    [
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "closePath",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "closePath",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "closePath",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "closePath",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "closePath",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "closePath",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "closePath",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "closePath",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "closePath",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "closePath",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "closePath",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "closePath",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
    ],
    [
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "closePath",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "closePath",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "closePath",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "closePath",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "closePath",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "closePath",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "closePath",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "closePath",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "closePath",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "closePath",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "closePath",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "closePath",
      "path",
      "moveTo",
      "bezierCurveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
      "path",
      "moveTo",
      "bezierCurveTo",
    ],
  ],
  "profile": [
    {
      "box": {
        "h": 71,
        "w": 100,
        "x": 14,
        "y": 14,
      },
      "kind": "rect",
    },
    {
      "box": {
        "h": 16,
        "w": 80,
        "x": 24,
        "y": 25,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 30,
        "w": 80,
        "x": 24,
        "y": 44,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 71,
        "w": 502,
        "x": 124,
        "y": 14,
      },
      "kind": "surface",
    },
    {
      "box": {
        "h": 71,
        "w": 100,
        "x": 14,
        "y": 95,
      },
      "kind": "rect",
    },
    {
      "box": {
        "h": 16,
        "w": 80,
        "x": 24,
        "y": 106,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 30,
        "w": 80,
        "x": 24,
        "y": 124,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 71,
        "w": 502,
        "x": 124,
        "y": 95,
      },
      "kind": "surface",
    },
    {
      "box": {
        "h": 71,
        "w": 100,
        "x": 14,
        "y": 175,
      },
      "kind": "rect",
    },
    {
      "box": {
        "h": 16,
        "w": 80,
        "x": 24,
        "y": 194,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 15,
        "w": 80,
        "x": 24,
        "y": 212,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 71,
        "w": 502,
        "x": 124,
        "y": 175,
      },
      "kind": "surface",
    },
  ],
}
`;

exports[`composed diagrams > process keeps a stable command profile 1`] = `
{
  "chrome": [
    [
      "line",
      "polyline",
      "line",
      "polyline",
    ],
  ],
  "profile": [
    {
      "box": {
        "h": 56,
        "w": 177,
        "x": 14,
        "y": 102,
      },
      "kind": "rect",
    },
    {
      "box": {
        "h": 16,
        "w": 157,
        "x": 24,
        "y": 113,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 15,
        "w": 157,
        "x": 24,
        "y": 132,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 56,
        "w": 177,
        "x": 231,
        "y": 102,
      },
      "kind": "rect",
    },
    {
      "box": {
        "h": 16,
        "w": 157,
        "x": 241,
        "y": 113,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 15,
        "w": 157,
        "x": 241,
        "y": 132,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 56,
        "w": 177,
        "x": 449,
        "y": 102,
      },
      "kind": "rect",
    },
    {
      "box": {
        "h": 16,
        "w": 157,
        "x": 459,
        "y": 113,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 15,
        "w": 157,
        "x": 459,
        "y": 132,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 232,
        "w": 612,
        "x": 14,
        "y": 14,
      },
      "kind": "surface",
    },
  ],
}
`;

exports[`composed diagrams > pyramid keeps a stable command profile 1`] = `
{
  "chrome": [
    [
      "path",
      "moveTo",
      "lineTo",
      "lineTo",
      "lineTo",
      "closePath",
      "path",
      "moveTo",
      "lineTo",
      "lineTo",
      "lineTo",
      "closePath",
      "path",
      "moveTo",
      "lineTo",
      "lineTo",
      "lineTo",
      "closePath",
    ],
  ],
  "profile": [
    {
      "box": {
        "h": 228,
        "w": 608,
        "x": 16,
        "y": 16,
      },
      "kind": "surface",
    },
    {
      "box": {
        "h": 16,
        "w": 69,
        "x": 285,
        "y": 30,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 30,
        "w": 69,
        "x": 285,
        "y": 48,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 16,
        "w": 243,
        "x": 198,
        "y": 113,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 15,
        "w": 243,
        "x": 198,
        "y": 132,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 16,
        "w": 418,
        "x": 111,
        "y": 189,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 15,
        "w": 418,
        "x": 111,
        "y": 208,
      },
      "kind": "text",
    },
  ],
}
`;

exports[`composed diagrams > quadrant keeps a stable command profile 1`] = `
{
  "chrome": [],
  "profile": [
    {
      "box": {
        "h": 18,
        "w": 612,
        "x": 14,
        "y": 14,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 81,
        "w": 302,
        "x": 14,
        "y": 36,
      },
      "kind": "rect",
    },
    {
      "box": {
        "h": 16,
        "w": 282,
        "x": 24,
        "y": 60,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 15,
        "w": 282,
        "x": 24,
        "y": 78,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 81,
        "w": 302,
        "x": 324,
        "y": 36,
      },
      "kind": "rect",
    },
    {
      "box": {
        "h": 16,
        "w": 282,
        "x": 334,
        "y": 60,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 15,
        "w": 282,
        "x": 334,
        "y": 78,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 18,
        "w": 24,
        "x": 14,
        "y": 121,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 18,
        "w": 32,
        "x": 594,
        "y": 121,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 81,
        "w": 612,
        "x": 14,
        "y": 143,
      },
      "kind": "rect",
    },
    {
      "box": {
        "h": 16,
        "w": 592,
        "x": 24,
        "y": 167,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 15,
        "w": 592,
        "x": 24,
        "y": 185,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 18,
        "w": 612,
        "x": 14,
        "y": 228,
      },
      "kind": "text",
    },
  ],
}
`;

exports[`composed diagrams > roadmap keeps a stable command profile 1`] = `
{
  "chrome": [
    [
      "line",
      "line",
      "line",
      "line",
      "line",
    ],
  ],
  "profile": [
    {
      "box": {
        "h": 232,
        "w": 612,
        "x": 14,
        "y": 14,
      },
      "kind": "surface",
    },
    {
      "box": {
        "h": 20,
        "w": 153,
        "x": 14,
        "y": 14,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 20,
        "w": 153,
        "x": 167,
        "y": 14,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 20,
        "w": 153,
        "x": 320,
        "y": 14,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 20,
        "w": 153,
        "x": 473,
        "y": 14,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 63,
        "w": 604,
        "x": 18,
        "y": 38,
      },
      "kind": "rect",
    },
    {
      "box": {
        "h": 16,
        "w": 584,
        "x": 28,
        "y": 53,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 15,
        "w": 584,
        "x": 28,
        "y": 71,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 63,
        "w": 604,
        "x": 18,
        "y": 109,
      },
      "kind": "rect",
    },
    {
      "box": {
        "h": 16,
        "w": 584,
        "x": 28,
        "y": 123,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 15,
        "w": 584,
        "x": 28,
        "y": 142,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 63,
        "w": 604,
        "x": 18,
        "y": 179,
      },
      "kind": "rect",
    },
    {
      "box": {
        "h": 16,
        "w": 584,
        "x": 28,
        "y": 194,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 15,
        "w": 584,
        "x": 28,
        "y": 212,
      },
      "kind": "text",
    },
  ],
}
`;

exports[`composed diagrams > steps keeps a stable command profile 1`] = `
{
  "chrome": [
    [],
  ],
  "profile": [
    {
      "box": {
        "h": 107,
        "w": 197,
        "x": 14,
        "y": 139,
      },
      "kind": "rect",
    },
    {
      "box": {
        "h": 16,
        "w": 177,
        "x": 24,
        "y": 151,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 15,
        "w": 177,
        "x": 24,
        "y": 170,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 169,
        "w": 197,
        "x": 221,
        "y": 77,
      },
      "kind": "rect",
    },
    {
      "box": {
        "h": 16,
        "w": 177,
        "x": 231,
        "y": 89,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 15,
        "w": 177,
        "x": 231,
        "y": 107,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 232,
        "w": 197,
        "x": 429,
        "y": 14,
      },
      "kind": "rect",
    },
    {
      "box": {
        "h": 16,
        "w": 177,
        "x": 439,
        "y": 26,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 15,
        "w": 177,
        "x": 439,
        "y": 44,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 232,
        "w": 612,
        "x": 14,
        "y": 14,
      },
      "kind": "surface",
    },
  ],
}
`;

exports[`composed diagrams > target keeps a stable command profile 1`] = `
{
  "chrome": [
    [
      "circle",
      "circle",
      "circle",
    ],
  ],
  "profile": [
    {
      "box": {
        "h": 260,
        "w": 640,
        "x": 0,
        "y": 0,
      },
      "kind": "surface",
    },
    {
      "box": {
        "h": 16,
        "w": 84,
        "x": 278,
        "y": 16,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 30,
        "w": 84,
        "x": 278,
        "y": 34,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 16,
        "w": 65,
        "x": 288,
        "y": 55,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 30,
        "w": 65,
        "x": 288,
        "y": 73,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 32,
        "w": 46,
        "x": 297,
        "y": 122,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 15,
        "w": 46,
        "x": 297,
        "y": 156,
      },
      "kind": "text",
    },
  ],
}
`;

exports[`composed diagrams > timeline keeps a stable command profile 1`] = `
{
  "chrome": [
    [
      "line",
      "circle",
      "circle",
      "circle",
    ],
  ],
  "profile": [
    {
      "box": {
        "h": 16,
        "w": 188,
        "x": 18,
        "y": 79,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 15,
        "w": 188,
        "x": 18,
        "y": 97,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 16,
        "w": 188,
        "x": 226,
        "y": 148,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 15,
        "w": 188,
        "x": 226,
        "y": 166,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 16,
        "w": 188,
        "x": 434,
        "y": 79,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 15,
        "w": 188,
        "x": 434,
        "y": 97,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 232,
        "w": 612,
        "x": 14,
        "y": 14,
      },
      "kind": "surface",
    },
  ],
}
`;

exports[`composed diagrams > venn keeps a stable command profile 1`] = `
{
  "chrome": [
    [
      "circle",
      "circle",
      "circle",
    ],
  ],
  "profile": [
    {
      "box": {
        "h": 260,
        "w": 640,
        "x": 0,
        "y": 0,
      },
      "kind": "surface",
    },
    {
      "box": {
        "h": 16,
        "w": 78,
        "x": 281,
        "y": 32,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 30,
        "w": 78,
        "x": 281,
        "y": 50,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 16,
        "w": 78,
        "x": 345,
        "y": 143,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 30,
        "w": 78,
        "x": 345,
        "y": 161,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 32,
        "w": 78,
        "x": 217,
        "y": 142,
      },
      "kind": "text",
    },
    {
      "box": {
        "h": 15,
        "w": 78,
        "x": 217,
        "y": 177,
      },
      "kind": "text",
    },
  ],
}
`;
